# FamilyAlbumDownloader

./: .gitignore  Cargo.toml  ExifClient.cs  FamilyAlbumClient.cs  FamilyAlbumDownload.csproj  FamilyAlbumDownload.sln  Model.cs  Program.cs  readme.md
.github/workflows/: build.yml
src/: family_album_client.rs  main.rs  model.rs
