[package]
name = "family_album_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#regex = "1"
fancy-regex = "0.10"
clap = { version = "3", features = ["derive"] }
filetime = "0.2"
git-version = "0.3"
indicatif = "0.17.0"
log = "0.4.17"
