[package]
name = "family_album_downloader"
version = "0.1.0"
edition = "2024"

# this generates a snake case warning. currently choosing to ignore.
[[bin]]
name = "FamilyAlbumDownloader"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
git-version = "0.3"
indicatif = "0.17"
log = "0.4"
ffmpeg-sidecar = "2"
anyhow = "1"
